syntax = "proto3";
package comdex.block.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/block/v1beta1/params.proto";
import "comdex/block/v1beta1/asset.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/comdex-official/comdex/x/block/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/block/block/params";
  }
  // Queries a list of ShowAsset items.
	rpc ShowAsset(QueryShowAssetRequest) returns (QueryShowAssetResponse) {
		option (google.api.http).get = "/block/block/show_asset";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowAssetRequest {
  uint64 id = 1;
}

message QueryShowAssetResponse {
  Asset asset = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset\""];
}

// this line is used by starport scaffolding # 3
